--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <log4j2.version>2.14.1</log4j2.version>
         <!-- 官方修复版本 -->
         <!--<log4j2.version>2.16.0</log4j2.version>-->
+        <commons.logging.version>1.2</commons.logging.version>
+        <slf4j.version>1.7.32</slf4j.version>
     </properties>
 
     <dependencies>
